# prove

./: .env.example  .gitignore  README.md  pyproject.toml
app/: api.py  config.py  main.py  training.py  tts.py
static/: index.html
static/css/: style.css
static/js/: api.js  app.js  recorder.js
